--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/ssr": "latest",
@@ -31,8 +33,11 @@
     "next-themes": "^0.2.1",
     "postcss": "8.4.33",
     "react": "18.2.0",
+    "react-aria": "^3.32.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-merge-refs": "^2.1.1",
+    "react-stately": "^3.30.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
