--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "supabase:stop": "npx supabase stop",
     "supabase:status": "npx supabase status",
     "supabase:reset": "npx supabase db reset",
-    "supabase:gen-types": "npx supabase gen types typescript --local --schema public > types/supabase.ts"
+    "supabase:gen-types": "npx supabase gen types typescript --local --schema public > lib/supabase/types.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
