--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 
 # testing
 /coverage
+/playwright/.cache/
+/e2e/results/
+/e2e/reports/
 
 # next.js
 /.next/
@@ -25,7 +28,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# lenv files
+.env
 .env*.local
 
 # vercel
