--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "supabase:stop": "npx supabase stop",
     "supabase:status": "npx supabase status",
     "supabase:reset": "npx supabase db reset",
-    "supabase:gen-types": "npx supabase gen types typescript --local --schema public > lib/supabase/types.ts"
+    "supabase:gen-types": "npx supabase gen types typescript --local --schema public > lib/supabase/types.ts",
+    "test:e2e": "npx playwright test",
+    "test:e2e-ui": "npx playwright test --ui"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -47,9 +49,11 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@playwright/test": "^1.45.1",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "dotenv": "^16.4.5",
     "encoding": "^0.1.13"
   }
 }
