--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -35,6 +36,7 @@
     "next": "latest",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.12",
+    "nuqs": "^1.17.8",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-aria": "^3.32.1",
