--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "supabase:stop": "npx supabase stop",
     "supabase:status": "npx supabase status",
     "supabase:reset": "npx supabase db reset",
-    "supabase:gen-types": "npx supabase gen types typescript --local --schema public > lib/supabase/types.ts",
+    "supabase:gen-types": "npx supabase gen types --lang=typescript --local --schema public > \"app/(lib)/supabase/types.ts\"",
     "test:e2e": "npx playwright test",
     "test:e2e-ui": "npx playwright test --ui"
   },
