--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.0.4",
@@ -35,7 +36,7 @@
     "geist": "^1.2.1",
     "next": "latest",
     "next-themes": "^0.2.1",
-    "nextjs-toploader": "^1.6.12",
+    "nextjs-toploader": "^3.6.15",
     "nuqs": "^1.17.8",
     "postcss": "8.4.33",
     "react": "18.2.0",
